--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -1,3 +1,5 @@
 kick-success: "&c已将玩家 &f{0} &c从服务器请出!"
 ban-success: "&c已将玩家 &f{0} &c从服务器封禁!"
 unban-success: "&c已将玩家 &f{0} &c从服务器解封!"
+
+no-permission: "&c无进行当前操作的权限！"
