--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -9,7 +9,7 @@ Plugin-Update:
   - '&r| &b◈ &r发现了一个新的插件版本！'
   - '&r| &b◈ &r最新版本: %latestVersion%'
   - '&r| &b◈ &r当前版本: %currentVersion%'
-  - '&r| &b◈ &r查看详情: https://www.minebbs.com/resources/7081/'
+  - '&r| &b◈ &r查看详情: https://mcbbs2.net/thread-214-1-1.html'
   - '&r===============[&e&l插件更新&r]=============='
 No-Permission: "&c无进行当前操作的权限！"
 # 配置相关
